--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
   --blue: #134880;
   --gray: #dddddd;
+  --white: #f2f2f2;
 }
 
 *,
@@ -11,8 +12,12 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: var(--white);
+}
+
 .container {
-  max-width: 940px;
+  max-width: 941px;
   max-height: 730px;
   height: 100%;
   width: 100%;
@@ -21,11 +26,26 @@
 
 header,
 footer {
-  padding: 2.313em 0;
-  background-color: var(--blue);
+  height: 100px;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+}
+
+footer {
+  background-color: var(--gray);
+}
+
+.box {
+  background-color: var(--gray);
+  height: 100%;
+  border-radius: 0px 0px 5px 5px;
+}
+
+.box1 {
+  width: 301px;
+}
+.box2 {
+  width: 621px;
 }
 
 main {
@@ -66,7 +86,6 @@ img {
   justify-content: flex-end;
   position: relative;
   gap: 8px;
-  /* overflow-x: hidden; */
 }
 
 .text {
