--- a/styles/scss/_main.scss
+++ b/styles/scss/_main.scss
@@ -4,64 +4,46 @@
   height: 100%;
   border-radius: 0px 0px 5px 5px;
 }
-
 .box1 {
   width: 301px;
 }
 .box2 {
   width: 621px;
 }
-
 .main-container {
-  display: flex;
-  margin: auto 0;
+  height: 100%;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  justify-content: flex-end;
+  gap: 20px;
 }
+
 .slider {
-  flex: 2;
-  height: 420px;
   display: flex;
   flex-direction: column;
+  gap: 10px;
+}
+.row {
+  width: 1430px;
+  height: 200px;
+  display: flex;
   justify-content: flex-end;
-  position: relative;
-  gap: 8px;
+  gap: 10px;
 }
 
 .text {
-  flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 1em;
-  padding: 1em;
-}
-
-.wrapper {
-  position: relative;
-  height: 200px;
-  overflow: hidden;
-}
-
-.wrapper1 {
-  width: 600px;
-}
-
-.wrapper2 {
-  width: 500px;
-}
-
-.row {
-  position: absolute;
-  top: 0%;
-  right: 0;
-  display: flex;
-  align-items: center;
-  gap: 0.5em;
+  width: 300.93px;
+  gap: 20px;
 }
 
 .button-container {
-  position: absolute;
-  bottom: 20%;
-  right: 0;
   display: flex;
   flex-direction: column;
-  gap: 0.5em;
+  align-items: flex-end;
+  width: 160px;
+  gap: 10px;
+  margin-top: 10px;
 }
