--- a/styles/scss/base/_variables.scss
+++ b/styles/scss/base/_variables.scss
@@ -1,6 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap");
 
 $ff-SansPro: "Source Sans Pro", sans-serif;
+
+$fw-bold: 700;
+$fw-normal: 400;
 
 $blue: #134880;
 $gray: #dddddd;
