--- a/styles/scss/layout/_main.scss
+++ b/styles/scss/layout/_main.scss
@@ -22,10 +22,14 @@
 .slider {
   display: flex;
   flex-direction: column;
+  align-items: flex-end;
   gap: 10px;
 }
+.bottom {
+  display: flex;
+}
 .row {
-  width: 1430px;
+  width: fit-content;
   height: 200px;
   display: flex;
   justify-content: flex-end;
