--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -143,11 +143,22 @@ button:hover {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   gap: 10px;
 }
 
+.bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .row {
-  width: 1430px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   height: 200px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -156,6 +167,7 @@ button:hover {
       -ms-flex-pack: end;
           justify-content: flex-end;
   gap: 10px;
+  overflow-x: hidden;
 }
 
 .text {
