--- a/styles/scss/layout/_main.scss
+++ b/styles/scss/layout/_main.scss
@@ -20,9 +20,7 @@
 }
 
 .slider {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
+  @include flex-display(initial, flex-end, column);
   gap: 10px;
 }
 .bottom {
@@ -31,24 +29,20 @@
 .row {
   width: fit-content;
   height: 200px;
-  display: flex;
-  justify-content: flex-end;
+  @include flex-display(flex-end, initial, initial);
   gap: 10px;
   overflow-x: hidden;
 }
 
 .text {
-  display: flex;
-  flex-direction: column;
   width: 300.93px;
+  @include flex-display(initial, initial, column);
   gap: 20px;
 }
 
 .button-container {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
   width: 160px;
+  @include flex-display(initial, flex-end, column);
   gap: 10px;
   margin-top: 10px;
 }
