--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -30,6 +30,13 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: initial;
+      -ms-flex-align: initial;
+          align-items: initial;
+  -webkit-box-orient: initial;
+  -webkit-box-direction: initial;
+      -ms-flex-direction: initial;
+          flex-direction: initial;
 }
 
 footer {
@@ -43,23 +50,20 @@ main {
 }
 
 h1 {
-  color: #134880;
   font-size: 32px;
+  color: #134880;
   line-height: 38px;
-  text-align: left;
   font-weight: 700;
-}
-
-p {
-  color: #484a4c;
-  font-size: 18px;
-  line-height: 26px;
   text-align: left;
-  font-weight: 400;
+  letter-spacing: -0.2px;
 }
 
-h1,
 p {
+  font-size: 18px;
+  color: #484a4c;
+  line-height: 26px;
+  font-weight: 400;
+  text-align: left;
   letter-spacing: -0.2px;
 }
 
@@ -139,13 +143,16 @@ button:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: initial;
+      -ms-flex-pack: initial;
+          justify-content: initial;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
   gap: 10px;
 }
 
@@ -166,34 +173,50 @@ button:hover {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+  -webkit-box-align: initial;
+      -ms-flex-align: initial;
+          align-items: initial;
+  -webkit-box-orient: initial;
+  -webkit-box-direction: initial;
+      -ms-flex-direction: initial;
+          flex-direction: initial;
   gap: 10px;
   overflow-x: hidden;
 }
 
 .text {
+  width: 300.93px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: initial;
+      -ms-flex-pack: initial;
+          justify-content: initial;
+  -webkit-box-align: initial;
+      -ms-flex-align: initial;
+          align-items: initial;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 300.93px;
   gap: 20px;
 }
 
 .button-container {
+  width: 160px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: initial;
+      -ms-flex-pack: initial;
+          justify-content: initial;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  width: 160px;
   gap: 10px;
   margin-top: 10px;
 }
